--- a/css/estilos.css
+++ b/css/estilos.css
@@ -70,13 +70,13 @@ html {
     padding-bottom:20%;
     position:relative;
     height:0;
+    margin-left:auto; margin-right:auto;
   }
   .map-container-section iframe {
-    left:0;
-    top:0;
     height:100%;
     width:100%;
-    position:absolute;
+    margin-left:auto; 
+    margin-right:auto;
   } 
 
   footer {
