--- a/css/estilos.css
+++ b/css/estilos.css
@@ -4,7 +4,7 @@ html {
 }
 
 .hero-image {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(255, 255, 255, 0.5)), url("../img/heroFrente.jpeg");
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(255, 255, 255, 0.5)), url("../img/hero-frente.jpeg");
     height: 100%;
     /* Position and center the image to scale nicely on all screens */
     background-position: center;
